Fix invisible logo on mobile devices

--- a/less/creative.less
+++ b/less/creative.less
@@ -129,6 +129,15 @@ aside {
             }
         }
     }
+
+    @media (max-width: 767px) {
+        .navbar-header .navbar-brand {
+            background-image: url("../img/logo-orange.png");
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+    }
+
     @media (min-width: 768px) {
         background-color: transparent;
         border-color: fade(white, 30%);
